[project]
name = "develope-model"
version = "0.1.0"
description = "AI Environment"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.6.0,<2.7.0",
  "torchvision>=0.21.0,<0.22.0",
  "torchaudio>=2.6.0,<2.7.0",
  "transformers>=4.57.3",
  "accelerate>=1.12.0",
  "safetensors>=0.7.0",
  "compressed-tensors>=0.13.0",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
]

[[tool.uv.index]]
name = "pypi-cn"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
